--- a/web/index.html
+++ b/web/index.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <div id="app"></div>
-        <script type="text/javascript" src="./target/scala-2.11/orbits-jsdeps.js"></script>
-        <script type="text/javascript" src="./target/scala-2.11/orbits-opt.js"></script>
+        <script type="text/javascript" src="generated/orbits-jsdeps.js"></script>
+        <script type="text/javascript" src="generated/orbits.js"></script>
         <script>
           orbits.App().main(document.getElementById('app'));
         </script>
